--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "es6-promise": "^4.2.2",
     "express": "^4.16.2",
     "foreman": "^2.0.0",
+    "lodash": "^4.17.4",
     "mongojs": "^2.4.1",
     "mongoose": "^5.0.0-rc2",
     "piranhax": "^1.0.9",
